[package]
name = "unity-cache-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.47"
async-trait = "0.1.51"
bytes = "1.1.0"
tokio = { version = "1.16.1", features = ["full"] }
uuid = { version = "0.8.2", features = ["v4"] }
